[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
half = "1.7.1"
console_error_panic_hook = "0.1.5"
ndarray = { version = "0.15" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Request",
  "RequestInit",
  "Response",
  "RequestMode",
  "Window",
  "console",
  "WorkerGlobalScope",
]
